[metadata]
name = arcade_ui
version = attr: arcade_ui.__version__
url = https://github.com/Den4200/arcade_gui
author = Dennis Pham
author_email = dennis@f1recloud.com
description = A high-level library to create GUIs using Arcade.
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Arcade
project_urls =
    Source = https://github.com/Den4200/arcade_gui

[options]
python_requires = >=3.6
packages = find:
install_requires =
    arcade >= 2.3.15

[flake8]
max-line-length = 119
